make tabs scroll horizontally if they hit width limit, fix buttons on profile on mobile

--- a/src/ui/styles/elements.css
+++ b/src/ui/styles/elements.css
@@ -1041,6 +1041,7 @@ input.slider:checked ~ .toggle-container .toggle-slider {
     border: none !important;
     color: var(--color-5);
     border-radius: 0;
+    text-wrap: nowrap;
     padding: var(--jessc-input-padding-y) var(--jessc-input-padding-x);
 }
 
@@ -1062,6 +1063,11 @@ input.slider:checked ~ .toggle-container .toggle-slider {
     gap: 0;
     border: 1px solid var(--color-7);
     border-radius: 999px;
+    flex-wrap: nowrap;
+    overflow-x: auto;
+    max-width: 100%;
+    width: max-content;
+    -webkit-overflow-scrolling: touch;
 }
 
 .tab:first-child {
